toolchain/internal/core/analysis/testdata/errors/enums/duplicate_value.vdl
// @expect: E303

enum HttpMethod {
  Get = "GET"
  Read = "GET"
}
